# phuego

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  README.md  README.rst  pyproject.toml
.github/workflows/: python-app.yml
docs/source/: conf.py  index.rst  input_preparation.rst  installation.rst  mock_test_run.rst  output.rst  support_data.rst  usage_api.rst  usage_cli.rst
docs/source/_static/: custom.css
phuego/: CLI.py  __init__.py  __main__.py  cli_app.py  convert_result_structure.py  dataprep.py  ego.py  ego2module.py  fishertest.py  generate_net.py  load_example.py  load_seeds.py  main.py  network_rwr.py  phuego.py  phuego_mock.py  phuego_sc.py  pvalue_splitting.py  rwr_values.py  utils.py  utils_CLI.py
phuego/data/: EGF_vs_Untreated_@min_15_63_240.txt
tests/: test_hello_world.py
