[tool.poetry]
name = "phuego"
version = "0.1.0.dev1"
description = "Propagation of phosphoproteomics signals"
authors = [
    "Girolamo Giudice <Girolamo.Giudice@gmail.com>",
    "Haoqi Chen <haoqichen20@gmail.com>",
    "Evangelia Petsalaki <petsalaki@ebi.ac.uk>"
]
readme = "README.md"
license = "GPL-3.0-only"
maintainers = [
    "Haoqi Chen <haoqichen20@gmail.com>",
    "Girolamo Giudice <Girolamo.Giudice@gmail.com>",
]
repository = "https://github.com/haoqichen20/phuego_dev"
keywords = ["Phosphoproteomics", "network propagation"]
packages = [{include = "phuego"},]
include = [{path = "phuego/data/*.txt"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
igraph = ">=0.10.2"
leidenalg = ">=0.9.0"
numpy = ">=1.24.3"
scikit-learn = ">=1.2.2"
scipy = ">=1.10.1"
requests = ">2.29.0"
pandas = ">=2.0.1"
click = ">=8.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
phuego = "phuego.main:main"
